@@ -1,3 +1,5 @@
 # InventoryManagementSystem
 
 - project for c482
+- set VM options to `--module-path ${PATH_TO_FX} --add-modules javafx.fxml,javafx.controls,javafx.graphics`
+- set `PATH_TO_FX` environment variable to the javafx sdk path. `C:\Program Files\javaFX\javafx-sdk-17.0.2\lib`
